# blockchain-bandits

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-api.yml
api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
api/app/: config.py  etherscan.py  main.py  mev_addresses.csv  scoring_errors.py  wallet_features.py
api/app/models/: schemas.py
api/app/routes/: analyze.py  feedback.py  health.py  stats.py
api/app/services/: jobs.py  persistence.py  scorer.py
api/tests/: test_smoke.py
data/: README.md  pyproject.toml
data/label_sources/: mev_addresses.csv
data/src/bb_data/: bigquery_extract.py  label_sources.py
data/supabase/: config.toml
data/supabase/migrations/: 001_initial.sql
docs/: 0001-tech-stack.md  0002-model-approach.md  PROJECT_SUMMARY.md  architecture.md  project-summary.md  roadmap.md  setup.md
ml/: README.md  modal_app.py  pyproject.toml
ml/notebooks/: 00_colab_setup.py  01_explore_bigquery.py  02_feature_engineering.py  03_train_xgboost.py  04_snorkel_labeling.py
ml/src/blockchain_bandits_ml/: explain.py  features.py  labeling.py  mev_addresses.csv  train.py
ml/tests/: test_features.py  test_labeling.py
web/: README.md  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/wallet/[address]/: page.tsx
web/components/: bb-class-badge.tsx  bb-header.tsx  bb-hero.tsx  bb-ledger-network.tsx  bb-ml-analytics.tsx  bb-pipeline.tsx  bb-search.tsx  bb-site-shell.tsx  bb-stat-pills.tsx  bb-ticker.tsx  bb-triage-table.tsx  risk-pill.tsx  search-bar.tsx  stat-card.tsx  wallet-table.tsx
web/lib/: api.ts  ml-analytics.ts  mock.ts  triage-trail.ts  types.ts  utils.ts  wallet-glossary.ts
