[project]
name = "blockchain-bandits-api"
version = "0.1.0"
description = "FastAPI service for Blockchain-Bandits"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "supabase>=2.9.0",
  "modal>=0.64.0",
  "sentry-sdk[fastapi]>=2.15.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.32.0",
  "ruff>=0.7.0",
  "pyright>=1.1.384",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
